--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   get: ^4.6.6
+  data_table_2: ^2.5.12
 
 dev_dependencies:
   flutter_test:
