ADD temporary map marking

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_fonts: ^6.2.1
   get: ^4.6.6
   data_table_2: ^2.5.12
+  google_maps_flutter_web: ^0.5.7
+  http: ^1.2.1
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
