--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   data_table_2: ^2.5.12
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
