--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_auth: ^4.19.6
   fl_chart: ^0.68.0
   cloud_firestore: ^4.17.5
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
