--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - lib/assets/images/crabs/
     - lib/assets/gif/
 
   # An image asset can refer to one or more resolution-specific "variants", see
