--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     intl: ^0.19.0
     http: ^1.2.2
     flutter_svg: ^2.0.17
+    url_launcher: ^6.3.1
 
 dev_dependencies:
     flutter_test:
