--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
     http: ^1.2.2
     flutter_svg: ^2.0.17
     url_launcher: ^6.3.1
+    printing: ^5.13.1
+    pdf: ^3.11.1
 
 dev_dependencies:
     flutter_test:
