--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,22 @@ dependencies:
     google_fonts: ^6.2.1
     get: ^4.6.6
     data_table_2: ^2.5.12
-    firebase_core: ^2.32.0
-    firebase_auth: ^4.19.6
+    firebase_core: ^3.12.0
+    firebase_auth: ^5.5.0
     fl_chart: ^0.68.0
-    cloud_firestore: ^4.17.5
+    cloud_firestore: ^5.6.4
     flutter_map: ^7.0.2
     latlong2: ^0.9.1
     flutter_map_cancellable_tile_provider: ^3.0.0
     intl: ^0.19.0
-    http: ^1.2.2
+    http: ^1.3.0
     flutter_svg: ^2.0.17
     url_launcher: ^6.3.1
     printing: ^5.13.1
     pdf: ^3.11.1
+    syncfusion_flutter_datagrid: ^28.2.6
+    syncfusion_flutter_core: ^28.2.6
+    firebase_storage: ^12.4.3
 
 dev_dependencies:
     flutter_test:
