--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
     flutter_svg: ^2.0.17
     url_launcher: ^6.3.1
     printing: ^5.13.1
-    pdf: ^3.11.1
+    pdf: ^3.11.3
+    web: ^0.5.1
 
 dev_dependencies:
     flutter_test:
